# argus

./: .env.example  .gitignore  CONTEXT.md  Makefile  README.md  docker-compose.yml
agent/: Dockerfile  package-lock.json  package.json
agent/src/: decide.ts  index.ts  types.ts
core/: Cargo.toml  Dockerfile  build.rs
core/migrations/: 001_init.sql
core/proto/: searcher.proto
core/src/: agent_client.rs  bundle.rs  config.rs  export.rs  failure.rs  leader.rs  main.rs  model.rs  rpc.rs  sender.rs  storage.rs  streaming.rs  tip.rs  wallet.rs
docs/: PLAN.md  SPEC.md
docs/adr/: 0001-rust-core-typescript-agent-split.md  0002-mainnet-for-real-path.md  0003-agent-owns-failure-reasoning.md  0004-confirmation-via-streams.md  0005-dynamic-tip-ownership.md  0006-model-access-via-openrouter.md  0007-jito-bundles-primary-sender-backstop.md  0008-leader-window-via-grpc-searcher.md  0009-streaming-resilience-bounded-channel-reconnect.md  0010-failure-classification-and-local-remedy-policy.md  0011-the-run-orchestration-and-lifecycle-log.md  0012-agent-owns-failure-diagnosis-over-unbounded-tail.md
logs/: lifecycle-1781848699679.jsonl  lifecycle-1781848699679.md  lifecycle-1781958744615.jsonl  lifecycle-1781958744615.md
scripts/: helius_sender_test.py
