[package]
name = "argus-core"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[[bin]]
name = "argus-core"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
# rustls-tls (not the default native-tls): no system OpenSSL on any platform, and
# consistent with the rustls stack already used for tonic/gRPC + the process-wide
# ring provider installed in main. Keeps `docker compose build` (rust:1-slim) working.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
solana-sdk = "4.0.1"
bincode = "1"
base64 = "0.22.1"
bs58 = "0.5.1"
solana-system-interface = { version = "3.2.0", features = ["bincode"] }
jito-sdk-rust = "0.3.2"
yellowstone-grpc-client = "13.1.1"
yellowstone-grpc-proto = "12.4.0"
futures = "0.3.32"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12", "logging"] }
# gRPC client for Jito's searcher.SearcherService/GetNextScheduledLeader (Day 5-6,
# ADR 0008). All three already resolve in the tree via yellowstone; we make them
# direct + select TLS features. The tls-* features are mandatory — without them
# Endpoint::tls_config doesn't compile.
tonic = { version = "0.14.6", default-features = false, features = ["channel", "tls-ring", "tls-native-roots"] }
tonic-prost = "0.14.6"
prost = "0.14.4"

[build-dependencies]
# Compile proto/searcher.proto at build time. protoc-bin-vendored ships a
# prebuilt protoc (no system dependency — works in docker), the same path
# yellowstone-grpc-proto already uses.
tonic-prost-build = "0.14.6"
protoc-bin-vendored = "3.2.0"
